# TrustOS

./: .gitignore  README.md
.claude/: launch.json
.github/workflows/: ci.yml
docs/: 00-overview.md  01-prd.md  02-system-architecture.md  03-backend-architecture.md  04-api-design.md  05-data-architecture.md  06-algorithms.md  07-ai-architecture.md  08-automation-engine.md  09-mobile-architecture.md  10-ux-design.md  11-security-architecture.md  12-devops-platform.md  13-testing-performance.md  14-roadmap.md  15-opportunity-network-strategy.md  16-legal-compliance.md  17-launch-marketing.md  18-daily-call-enforcement-awards.md  19-neo-minimal-design-system.md  20-usability-audit.md  21-production-readiness.md  _brief.md  _shared-context.md
landing/: index.html  learn.html
legal/: privacy-policy.md  terms-of-service.md
mobile/: .gitignore  README.md  analysis_options.yaml  l10n.yaml  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/app/: app.dart  bootstrap.dart  flavors.dart
mobile/web/: index.html  manifest.json
platform/: .env.example  Makefile  README.md  docker-compose.dev.yml  pyproject.toml
platform/libs/trustos_core/: pyproject.toml
platform/libs/trustos_core/src/trustos_core/: __init__.py  clock.py  domain.py  idempotency.py  ids.py  messaging.py  money.py  otel.py  outbox.py  pagination.py  problems.py  settings.py
platform/libs/trustos_core/tests/: test_domain.py  test_idempotency.py  test_ids.py  test_messaging.py  test_money.py  test_outbox.py  test_pagination.py  test_problems.py  test_settings_otel.py
platform/services/referral-service/: alembic.ini  pyproject.toml
platform/services/referral-service/alembic/: env.py
platform/services/referral-service/alembic/versions/: 0001_referral_schema.py
platform/services/referral-service/src/referral_service/: __init__.py  di.py  main.py  settings.py
platform/services/referral-service/src/referral_service/api/http/: dependencies.py  errors.py
platform/services/referral-service/src/referral_service/api/http/routers/: internal.py  referrals.py
platform/services/referral-service/src/referral_service/api/http/schemas/: referrals.py
platform/services/referral-service/src/referral_service/application/: errors.py
platform/services/referral-service/src/referral_service/application/commands/: convert_referral.py  qualify_referral.py  submit_referral.py
platform/services/referral-service/src/referral_service/application/ports/: read_model.py  trust_gateway.py  unit_of_work.py
platform/services/referral-service/src/referral_service/application/queries/: get_referral.py  list_referrals.py
platform/services/referral-service/src/referral_service/domain/: errors.py  events.py  repositories.py
platform/services/referral-service/src/referral_service/domain/model/: campaign.py  referral.py  value_objects.py
platform/services/referral-service/src/referral_service/infrastructure/: event_registry.py
platform/services/referral-service/src/referral_service/infrastructure/db/: campaign_repository.py  mapping.py  read_model.py  referral_repository.py  tables.py  unit_of_work.py
platform/services/referral-service/src/referral_service/infrastructure/gateways/: trust.py
platform/services/referral-service/tests/: conftest.py  fakes.py  helpers.py
platform/services/referral-service/tests/api/: test_referrals_api.py
platform/services/referral-service/tests/unit/application/: test_command_handlers.py
platform/services/referral-service/tests/unit/domain/: test_referral_lifecycle.py
(+97 files in other folders)
