[project]
name = "trustos-platform"
version = "0.1.0"
description = "TrustOS backend platform monorepo (uv workspace root)"
requires-python = ">=3.12"
dependencies = [
    "trustos-core",
    "referral-service",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "aiosqlite>=0.20",
    "ruff>=0.9",
    "mypy>=1.14",
]

[tool.uv.workspace]
members = ["libs/*", "services/*"]

[tool.uv.sources]
trustos-core = { workspace = true }
referral-service = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bare = true
include = ["README.md"]

# ── shared lint config (services may only tighten) ─────────────────────────
[tool.ruff]
line-length = 110
target-version = "py312"
extend-exclude = ["services/referral-service/alembic/versions"]

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "UP",        # pyupgrade
    "B",         # bugbear
    "SIM",       # simplify
    "RUF",       # ruff-specific
    "ASYNC",     # async correctness
]
ignore = [
    "SIM105",  # contextlib.suppress is not always clearer
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["B008", "RUF029"]

# ── mypy strict (scoped: trustos_core + referral domain/application) ───────
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
pretty = true
files = [
    "libs/trustos_core/src",
    "services/referral-service/src/referral_service/domain",
    "services/referral-service/src/referral_service/application",
]
mypy_path = [
    "libs/trustos_core/src",
    "services/referral-service/src",
]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["aiokafka.*", "redis.*", "opentelemetry.*"]
ignore_missing_imports = true

# ── pytest ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = [
    "libs/trustos_core/tests",
    "services/referral-service/tests",
]
addopts = "--import-mode=importlib -q"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
