[project]
name = "trustos-core"
version = "0.1.0"
description = "TrustOS shared cross-cutting library: ids, money, domain building blocks, problem details, idempotency, pagination, outbox, messaging, settings, otel"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0.36",
    "opentelemetry-sdk>=1.29",
]

[project.optional-dependencies]
kafka = ["aiokafka>=0.12"]
redis = ["redis>=5.2"]
otlp = ["opentelemetry-exporter-otlp-proto-http>=1.29"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trustos_core"]
