[project]
name = "referral-service"
version = "0.1.0"
description = "TrustOS referral-service: referral campaigns, referral lifecycle, attribution, commission calc (service #9)"
requires-python = ">=3.12"
dependencies = [
    "trustos-core[redis]",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
]

[tool.uv.sources]
trustos-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/referral_service"]
